--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<executable>true</executable>
 					<mainClass>io.github.gsteckman.doorcontroller.DoorApp</mainClass>
 				</configuration>
 			</plugin>
